chore: modernize code style and fix minor issues